@@ -1,5 +1,6 @@
 * Tue Jun 4 2019 David Hull <david.hull@openx.com> 6.12.0
 - Add gcounter type, a counter which emits values like a gauge.
+- Add unknown type in statsmsg to match other libraries.
 
 * Thu Feb 07 2019 Anthony Molinaro (djnym) 6.11.0
 - update lwes library
